--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,8 @@
     "build": "react-scripts build"
   },
   "dependencies": {
+    "antd": "^5.25.1",
+    "axios": "^1.9.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.0",
